# GodotMemory2

./: .gitignore  README.md  TESTPLAN.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  wdio.conf.cjs
.github/workflows/: release.yml
e2e/: app.html  asset-panel.test.cjs  bubble.test.cjs  diary-panel.test.cjs  engine-panel.test.cjs  generate-test-html.mjs  i18n.test.cjs  open-folder.test.cjs  panel-navigation.test.cjs  proj-panel.test.cjs  settings.test.cjs  test-page.html  tool-panel.test.cjs
e2e/shared/: mock-tauri.js  test-utils.js
src/: App.tsx  bridge.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  edge_snap.rs  lib.rs  main.rs  settings_store.rs  window.rs
src/components/: Bubble.tsx  ImageManager.tsx  PopupPanel.tsx  ScreenshotView.tsx  Toast.tsx
src/hooks/: usePanelManager.ts  useTagSelector.ts
src/i18n/: en_US.json  index.tsx  useTranslation.ts  zh_CN.json
src/panels/: AssetPanel.tsx  DiaryPanel.tsx  EnginePanel.tsx  ProjPanel.tsx  SettingPanel.tsx  ToolPanel.tsx
src/styles/: Bubble.css  PopupPanel.css  index.css  panels.css
src/test/: app.test.ts  integration.test.ts  save-button.test.tsx
src/types/: index.ts
